@startuml

' Clases

class Gasto {
  +establecimiento: str
  +fecha: Optional[str]
  +hora: Optional[str]
  +total: float
  +productos: List[Producto]
  +confianza: float
  +addproduct(producto: Producto) : void
  +parseGasto(): Dict[str, Any]
}

class Producto {
  +name: String
  +quantity: String
  +price: float
  +category: String
  +parseProduct(): Dict[str, Any]
}

class OCRServer {
  +port: Int
  +host: String
  +processImage(image: File) : Gasto
  +extractText(image: File) : String
  +processTextAI(text: String) : String
  +sendToSpringServer(json_gasto: Dict[str, Any]) : void
}

' Relaciones
OCRServer "1" -- "1" Gasto : genera
Gasto "1" -- "n" Producto : contiene

@enduml
